[gd_scene load_steps=83 format=2]

[ext_resource path="res://Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/Hannes/Projectiles/ProjectileSheet.png" type="Texture" id=6]
[ext_resource path="res://Enemies/Hannes/Projectiles/Projectile.gd" type="Script" id=7]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=8]
[ext_resource path="res://Enemies/Hannes/Projectiles/ProjectileMovementController.gd" type="Script" id=9]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=10]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 66, 10, 11 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 10, 66, 10, 11 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 20, 66, 10, 11 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 30, 66, 10, 11 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 40, 66, 10, 11 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 50, 66, 10, 11 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 60, 66, 10, 11 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 70, 66, 10, 11 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 0, 33, 10, 11 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 10, 33, 10, 11 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 20, 33, 10, 11 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 30, 33, 10, 11 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 40, 33, 10, 11 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 50, 33, 10, 11 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 60, 33, 10, 11 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 70, 33, 10, 11 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 0, 11, 10, 11 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 10, 11, 10, 11 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 20, 11, 10, 11 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 30, 11, 10, 11 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 40, 11, 10, 11 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 50, 11, 10, 11 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 60, 11, 10, 11 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 70, 11, 10, 11 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 0, 55, 10, 11 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 10, 55, 10, 11 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 20, 55, 10, 11 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 30, 55, 10, 11 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 40, 55, 10, 11 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 50, 55, 10, 11 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 60, 55, 10, 11 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 70, 55, 10, 11 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 10, 11 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 10, 0, 10, 11 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 20, 0, 10, 11 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 30, 0, 10, 11 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 6 )
region = Rect2( 40, 0, 10, 11 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 6 )
region = Rect2( 50, 0, 10, 11 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 6 )
region = Rect2( 60, 0, 10, 11 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 6 )
region = Rect2( 70, 0, 10, 11 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 6 )
region = Rect2( 0, 44, 10, 11 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 6 )
region = Rect2( 10, 44, 10, 11 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 6 )
region = Rect2( 20, 44, 10, 11 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 6 )
region = Rect2( 30, 44, 10, 11 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 6 )
region = Rect2( 40, 44, 10, 11 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 6 )
region = Rect2( 50, 44, 10, 11 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 6 )
region = Rect2( 60, 44, 10, 11 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 6 )
region = Rect2( 70, 44, 10, 11 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 6 )
region = Rect2( 0, 22, 10, 11 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 6 )
region = Rect2( 10, 22, 10, 11 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 20, 22, 10, 11 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 30, 22, 10, 11 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 6 )
region = Rect2( 40, 22, 10, 11 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 50, 22, 10, 11 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 60, 22, 10, 11 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 70, 22, 10, 11 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 0, 77, 10, 11 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 10, 77, 10, 11 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 20, 77, 10, 11 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 6 )
region = Rect2( 30, 77, 10, 11 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 6 )
region = Rect2( 40, 77, 10, 11 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 6 )
region = Rect2( 50, 77, 10, 11 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 6 )
region = Rect2( 60, 77, 10, 11 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 6 )
region = Rect2( 70, 77, 10, 11 )

[sub_resource type="SpriteFrames" id=66]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "W",
"speed": 7.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "SE",
"speed": 7.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "NE",
"speed": 7.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "SW",
"speed": 7.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "N",
"speed": 7.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "S",
"speed": 7.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "E",
"speed": 7.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "NW",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=67]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=68]
radius = 4.25184
height = 4.0

[sub_resource type="CapsuleShape2D" id=69]
radius = 3.57338
height = 6.30624

[sub_resource type="CircleShape2D" id=70]
radius = 5.0

[sub_resource type="Animation" id=71]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=72]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Projectile" type="KinematicBody2D"]
collision_layer = 64
script = ExtResource( 7 )
STATE = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( -1, 3 )
frames = SubResource( 66 )
animation = "SE"
frame = 2
playing = true
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( -0.0701523, -0.105229 )
scale = Vector2( 0.621169, 0.763231 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 67 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 128

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 68 )

[node name="Stats" parent="." instance=ExtResource( 1 )]
max_health = 1

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_mask = 12

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -5 )
shape = SubResource( 69 )

[node name="SoftCollision" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 70 )

[node name="MovementController" parent="." instance=ExtResource( 4 )]
visible = false
script = ExtResource( 9 )

[node name="DeathTimer" type="Timer" parent="MovementController"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 71 )
anims/Stop = SubResource( 72 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="SoftCollision" to="." method="_on_SoftCollision_area_entered"]
[connection signal="timeout" from="MovementController/DeathTimer" to="MovementController" method="_on_DeathTimer_timeout"]

[editable path="Hurtbox"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
